--- a/.github/workflows/pull_request.yaml
+++ b/.github/workflows/pull_request.yaml
@@ -6,8 +6,8 @@ env:
 on:
   push:
     branches: [ "main" ]
-  pull_request:
-    types: [opened, reopened]
+  # pull_request:
+  #   types: [opened, reopened]
 
 jobs:
   build:
@@ -16,7 +16,6 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Install score-humanitec
-        if: steps.changes.outputs.scorefiles == 'true'
         run: |
           wget https://github.com/score-spec/score-humanitec/releases/download/0.3.0/score-humanitec_0.3.0_linux_amd64.tar.gz
           tar -xvf score-humanitec_0.3.0_linux_amd64.tar.gz
@@ -24,5 +23,4 @@ jobs:
           mv score-humanitec /usr/local/bin
 
       - name: Run Score
-        if: steps.changes.outputs.scorefiles == 'true'
         run: score-humanitec delta --retry --deploy --token ${{ secrets.HUMANITEC_TOKEN }} --org ${{ vars.HUMANITEC_ORG }} --app APP_NAME --env development -f money-api/score.yaml --overrides moneyapi.overrides.score.yaml
