--- a/.github/workflows/pull_request.yaml
+++ b/.github/workflows/pull_request.yaml
@@ -48,3 +48,5 @@ jobs:
         uses: thollander/actions-comment-pull-request@v2
         with:
           filePath: pr_message.txt
+        permissions:
+          pull-requests: write
