--- a/.github/workflows/pull_request.yaml
+++ b/.github/workflows/pull_request.yaml
@@ -9,6 +9,10 @@ on:
     types: [opened, reopened, synchronize]
 
 jobs:
+  permissions:
+    contents: read
+    pull-requests: write
+    
   build:
     runs-on: ubuntu-latest
     steps:
@@ -48,5 +52,3 @@ jobs:
         uses: thollander/actions-comment-pull-request@v2
         with:
           filePath: pr_message.txt
-        permissions:
-          pull-requests: write
