Try fix formatting

--- a/.github/workflows/pull_request.yaml
+++ b/.github/workflows/pull_request.yaml
@@ -50,9 +50,9 @@ jobs:
           echo "Deployment ID: $DEPLOYMENT_ID" >> pr_message.txt
 
           echo "<details><summary>Score Output</summary>" >> pr_message.txt
-          echo "" >> pr_message.txt
+          echo "```" >> pr_message.txt
           cat score_output.json >> pr_message.txt
-          echo "" >> pr_message.txt
+          echo "```" >> pr_message.txt
           echo "</details>" >> pr_message.txt
 
           cat pr_message.txt
