please fix json format

--- a/.github/workflows/pull_request.yaml
+++ b/.github/workflows/pull_request.yaml
@@ -51,7 +51,11 @@ jobs:
 
           echo "<details><summary>Score Output</summary>" >> pr_message.txt
           echo "" >> pr_message.txt
+          echo "```json" >> pr_message.txt
+          echo "" >> pr_message.txt
           cat score_output.json >> pr_message.txt
+          echo "" >> pr_message.txt
+          echo "```" >> pr_message.txt
           echo "" >> pr_message.txt
           echo "</details>" >> pr_message.txt
 
