--- a/.github/workflows/pull_request.yaml
+++ b/.github/workflows/pull_request.yaml
@@ -46,16 +46,21 @@ jobs:
         run: |
           ENV_URL=$(jq -r ".metadata.url" score_output.json)
           DEPLOYMENT_ID=$(jq -r ".id" score_output.json)
-          echo "Deployment Complete for PR-${{ github.event.number }}! :tada: [View in Humanitec]($ENV_URL)" >> pr_message.txt
+          
+          echo "## Deployment Complete for PR-${{ github.event.number }}! :tada:" >> pr_message.txt
+          echo "" >> pr_message.txt
+          
+          echo "[View in Humanitec]($ENV_URL)" >> pr_message.txt
           echo "Deployment ID: $DEPLOYMENT_ID" >> pr_message.txt
 
           echo "<details><summary>Score Output</summary>" >> pr_message.txt
           echo "" >> pr_message.txt
-          echo "```json" >> pr_message.txt
+          echo "### Score Output:" >> pr_message.txt
+          echo '```json' >> pr_message.txt
           echo "" >> pr_message.txt
           cat score_output.json >> pr_message.txt
           echo "" >> pr_message.txt
-          echo "```" >> pr_message.txt
+          echo '```' >> pr_message.txt
           echo "" >> pr_message.txt
           echo "</details>" >> pr_message.txt
 
