--- a/.github/workflows/pull_request.yaml
+++ b/.github/workflows/pull_request.yaml
@@ -42,16 +42,30 @@ jobs:
       - name: Run Score
         run: score-humanitec delta --retry --deploy --token ${{ secrets.HUMANITEC_TOKEN }} --org ${{ vars.HUMANITEC_ORG }} --app $APP_NAME --env pr-${{ github.event.number }} | tee score_output.json
 
+      - name: Wait for deployment
+        run: |
+          sleep 1
+
       - name: Build Comment Message
         run: |
           ENV_URL=$(jq -r ".metadata.url" score_output.json)
           DEPLOYMENT_ID=$(jq -r ".id" score_output.json)
+          DOMAINS=$(curl -H "Authorization: Bearer ${{ secrets.HUMANITEC_TOKEN }}" https://api.humanitec.io/orgs/${{ vars.HUMANITEC_ORG }}/apps/$APP_NAME/envs/pr-${{ github.event.number }}/resources | jq -r '. | map(. | select(.type == "dns")) | map((.res_id | split(".") | .[1]) + ": [" + .resource.host + "](" + .resource.host + ")") | join("\n")')
           
           echo "## Deployment Complete for PR-${{ github.event.number }}! :tada:" >> pr_message.txt
           echo "" >> pr_message.txt
           
           echo "## [View in Humanitec ![Humanitec](https://assets.website-files.com/64462c9aa967776f20e53b43/64512f438f3c547f2cc63d7f_Favicon%2032x32.svg)]($ENV_URL)" >> pr_message.txt
           echo "Deployment ID: $DEPLOYMENT_ID" >> pr_message.txt
+
+          echo "" >> pr_message.txt
+          echo "### Domains:" >> pr_message.txt
+          echo '```' >> pr_message.txt
+          echo "" >> pr_message.txt
+          echo "$DOMAINS" >> pr_message.txt
+          echo "" >> pr_message.txt
+          echo '```' >> pr_message.txt
+          echo "" >> pr_message.txt
 
           echo "<details><summary>Score Output</summary>" >> pr_message.txt
           echo "" >> pr_message.txt
