--- a/.github/workflows/close_pr.yaml
+++ b/.github/workflows/close_pr.yaml
@@ -1,13 +1,13 @@
 name: Pull Request
 on:
   pull_request:
-    types: [closed]
+    types:
+      - closed
 jobs:
   cleanup:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-      - name: Create Humanitec App
+      - name: Delete Humanitec Env
         run: |
             curl -X DELETE \
             -H "Content-Type: application/json" \
