--- a/.github/workflows/pull_request.yaml
+++ b/.github/workflows/pull_request.yaml
@@ -7,6 +7,7 @@ permissions:
   pull-requests: write
 env:
   BASE_ENVIRONMENT: 'development'
+  ENVIRONMENT_TYPE: 'development'
   SCORE_HUMANITEC_VERSION: 0.5.0
 jobs:
   build:
@@ -32,7 +33,7 @@ jobs:
               "from_deploy_id": "$(cat deploy_id.txt)",
               "id": "pr-${{ github.event.number }}",
               "name": "PR-${{ github.event.number }}",
-              "type": "${{ env.BASE_ENVIRONMENT }}"
+              "type": "${{ env.ENVIRONMENT_TYPE }}"
             }
             EOF
       - name: Install score-humanitec
