env.ENVIRONMENT_ID

--- a/.github/workflows/pull_request.yaml
+++ b/.github/workflows/pull_request.yaml
@@ -9,6 +9,8 @@ env:
   BASE_ENVIRONMENT: 'development'
   ENVIRONMENT_TYPE: 'development'
   SCORE_HUMANITEC_VERSION: 0.5.0
+  ENVIRONMENT_ID: pr-${{ github.event.number }}
+  ENVIRONMENT_NAME: PR-${{ github.event.number }}
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -31,8 +33,8 @@ jobs:
             --data-binary @- << EOF
             {
               "from_deploy_id": "$(cat deploy_id.txt)",
-              "id": "pr-${{ github.event.number }}",
-              "name": "PR-${{ github.event.number }}",
+              "id": "${{ env.ENVIRONMENT_ID }}",
+              "name": "${{ env.ENVIRONMENT_NAME }}",
               "type": "${{ env.ENVIRONMENT_TYPE }}"
             }
             EOF
@@ -50,7 +52,7 @@ jobs:
               --token ${{ secrets.HUMANITEC_TOKEN }} \
               --org ${{ vars.HUMANITEC_ORG }} \
               --app ${{ vars.APP_NAME }} \
-              --env pr-${{ github.event.number }} \
+              --env ${{ env.ENVIRONMENT_ID }} \
               | tee score_output.json
       - name: Wait for deployment
         run: |
@@ -62,7 +64,7 @@ jobs:
             CURRENT_STATUS=$(curl \
               -H "Content-Type: application/json" \
               -H 'Authorization: Bearer ${{ secrets.HUMANITEC_TOKEN }}' \
-              https://api.humanitec.io/orgs/${{ vars.HUMANITEC_ORG }}/apps/${{ vars.APP_NAME }}/envs/pr-${{ github.event.number }} \
+              https://api.humanitec.io/orgs/${{ vars.HUMANITEC_ORG }}/apps/${{ vars.APP_NAME }}/envs/${{ env.ENVIRONMENT_ID }} \
               | jq -r ".last_deploy.status")
             
             INPROGRESS="in progress"
@@ -79,9 +81,9 @@ jobs:
         run: |
           ENV_URL=$(jq -r ".metadata.url" score_output.json)
           DEPLOYMENT_ID=$(jq -r ".id" score_output.json)
-          DOMAINS=$(curl -H "Authorization: Bearer ${{ secrets.HUMANITEC_TOKEN }}" https://api.humanitec.io/orgs/${{ vars.HUMANITEC_ORG }}/apps/${{ vars.APP_NAME }}/envs/pr-${{ github.event.number }}/resources | jq -r '. | map(. | select(.type == "dns")) | map((.res_id | split(".") | .[1]) + ": [" + .resource.host + "](https://" + .resource.host + ")") | join("\n")')
+          DOMAINS=$(curl -H "Authorization: Bearer ${{ secrets.HUMANITEC_TOKEN }}" https://api.humanitec.io/orgs/${{ vars.HUMANITEC_ORG }}/apps/${{ vars.APP_NAME }}/envs/${{ env.ENVIRONMENT_ID }}/resources | jq -r '. | map(. | select(.type == "dns")) | map((.res_id | split(".") | .[1]) + ": [" + .resource.host + "](https://" + .resource.host + ")") | join("\n")')
           
-          echo "## Deployment Complete for PR-${{ github.event.number }}! :tada:" >> pr_message.txt
+          echo "## Deployment Complete for ${{ env.ENVIRONMENT_NAME }}! :tada:" >> pr_message.txt
           echo "" >> pr_message.txt
           
           echo "### [View in Humanitec]($ENV_URL)" >> pr_message.txt
