--- a/.github/workflows/pull_request.yaml
+++ b/.github/workflows/pull_request.yaml
@@ -16,7 +16,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - name: Create Humanitec App
+      - name: Create Humanitec Env
         run: |
             # Get deployment ID of the main development environment
             curl \
