--- a/score.yaml
+++ b/score.yaml
@@ -15,13 +15,15 @@ containers:
   frontend:
     image: registry.humanitec.io/public/sample-score-app:latest
     variables:
-      MESSAGE: "Hello team!"
+      MESSAGE: "Hello World!"
       PORT: "3000"
       DB_DATABASE: ${resources.db.name}
       DB_USER: ${resources.db.username}
       DB_PASSWORD: ${resources.db.password}
       DB_HOST: ${resources.db.host}
       DB_PORT: ${resources.db.port}
+      IMAGES_BUCKET: ${resources.images.bucket}
+      IMAGES_REGION: ${resources.images.region}
 
 # Define the resources that this service needs
 resources:
@@ -35,4 +37,9 @@ resources:
       password:
       host:
       port:
+  images:
+    type: s3
+    properties:
+      bucket:
+      region:
 
