--- a/score.yaml
+++ b/score.yaml
@@ -15,7 +15,7 @@ containers:
   frontend:
     image: registry.humanitec.io/public/sample-score-app:latest
     variables:
-      MESSAGE: "Hello World!"
+      MESSAGE: "Hello World!!!!!!!"
       PORT: "3000"
       DB_DATABASE: ${resources.db.name}
       DB_USER: ${resources.db.username}
@@ -29,3 +29,5 @@ resources:
     type: dns
   db:  # We need a database to store data
     type: postgres
+  files:
+    type: s3
