new route support in Score

--- a/score.yaml
+++ b/score.yaml
@@ -27,5 +27,11 @@ containers:
 resources:
   dns: # We need a DNS record to point to the service 
     type: dns
+  route: # We need a route attach to the DNS record 
+    type: route
+    params:
+      host: ${resources.dns.host}
+      path: /
+      port: 80
   db:  # We need a database to store data
     type: postgres
