--- a/humanitec.score.yaml
+++ b/humanitec.score.yaml
@@ -1,12 +1,2 @@
 apiVersion: humanitec.org/v1b1
-
-# Humanitec specific metadata
-# In this case we are defining the ingress rules for the service
-spec:
-  ingress:
-    rules:
-      "${resources.dns}": # This is the DNS record that we defined in the resources section
-        http:
-          "/":
-            type: prefix
-            port: 80
+profile: humanitec/default-module
