--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -8,18 +8,16 @@ permissions:
   pull-requests: write
 env:
   ENVIRONMENT: 'development'
-  SCORE_HUMANITEC_VERSION: 0.8.0
+  SCORE_HUMANITEC_VERSION: 0.9.1
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - name: Install score-humanitec
-        run: |
-          wget https://github.com/score-spec/score-humanitec/releases/download/${{ env.SCORE_HUMANITEC_VERSION }}/score-humanitec_${{ env.SCORE_HUMANITEC_VERSION }}_linux_amd64.tar.gz
-          tar -xvf score-humanitec_${{ env.SCORE_HUMANITEC_VERSION }}_linux_amd64.tar.gz
-          chmod +x score-humanitec
-          mv score-humanitec /usr/local/bin
+      - uses: score-spec/setup-score@v2
+        with:
+          file: score-humanitec
+          version: ${{ env.SCORE_HUMANITEC_VERSION }}
       - name: Run Score
         run: |
           score-humanitec delta \
